Hierarchical redesign + null pointer resolutions + menu dragging false

--- a/setmeup.properties
+++ b/setmeup.properties
@@ -1,3 +1,2 @@
-#Wed May 08 22:09:25 BRT 2019
-path=C\:\\Users\\Guilherme
-branches.Music.lastsetupdate=08/05/2019
+#Thu May 09 07:11:58 BRT 2019
+path=C\:\\Users\\guidanoli
