--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-# Software Properties
-*properties.xml
-*launch.log
-
-# Eclipse files
-.classpath
-.project
-.settings/
-
 # Compiled class file
 *.class
 
@@ -30,5 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/bin/
-/bin1/
+
+# Binaries
+bin*
